# 3-python-package-this-package

./: Pipfile  README.md  calculator.py  date.py  example.py  pyproject.toml  test_calculator.py  test_date.py  test_timer.py
.github/workflows/: python-package.yml
src/: utilities.py
src/calculator/: calculator.py
src/crypto/: b64.py  utils.py
src/date/: date.py
src/shutdown/: shutdown.py
tests/: test_EncDec.py  test_calculator.py  test_date.py  test_timer.py
